<resources>
    <string name="app_name">Fun In Space</string>
    <string name="action_settings">Settings</string>
    <string name="html_help_basepage">en_help.html</string>
    <string name="hfcm_yes">YES</string>
    <string name="hfcm_no">NO</string>
    <string name="hfcm_cancel">CANCEL</string>
    <string name="hfcm_proceed">PROCEED</string>
    <string name="hfcm_ok">OK</string>
    <string name="lowres">Lowres: %s</string>
    <string name="hires">Hires: %s</string>
    <string name="vimeo_duration">Duration: %s seconds</string>
    <string name="already_loaded">Latest available image of the day has already been loaded</string>
    <string name="apod_load">New Image of the day has been loaded</string>
    <string name="no_video_yet" formatted="false">Sorry, but %s cannot be displayed yet\nURL = %s</string>
    <string name="load_miss_thumbs">Loading %1$d missing thumbnails in background&#8230;</string>
    <string name="title_activity_image">ImageActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="filetransfer1">This allows to transfer the JSON metadata files and thumbnail
        images via Socket to a listener Python script running on a remote machine.</string>
    <string name="rate_limit_exceeded">FunInSpace could not load a new daily image. Most likely,
        the API rate limit has been exceeded.</string>
    <string name="no_apod">No Image received</string>
    <string name="no_youtube">FunInSpace needs to have the YouTube App installed on your phone in
        order to play YouTube videos. Please install the YouTube App from the App Store</string>
    <string name="sorry">I\'m so sorry, but</string>
    <string name="title_activity_settings">Settings</string>
    <string name="wallpaper_quality">Wallpaper image Quality</string>
    <string-array name="wp_quality_titles">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
        <item>Excellent</item>
    </string-array>
    <string-array name="wp_quality_values">
        <item>25</item>
        <item>50</item>
        <item>80</item>
        <item>100</item>
    </string-array>
    <string name="wp_shuffle_times">Wallpaper Shuffle Times</string>
    <string-array name="wp_shuffle_times_titles">
        <item>00:00</item>
        <item>01:00</item>
        <item>02:00</item>
        <item>03:00</item>
        <item>04:00</item>
        <item>05:00</item>
        <item>06:00</item>
        <item>07:00</item>
        <item>08:00</item>
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>21:00</item>
        <item>22:00</item>
        <item>23:00</item>
    </string-array>
    <string-array name="wp_shuffle_times_values">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>
    <string-array name="wp_shuffle_times_defaults">
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>
    <string name="df_dd_mm_yyyy">dd.MM.yyyy</string>
    <string name="df_title">Date Format</string>
    <string-array name="df_titles">
        <item>15.03.1964</item>
        <item>15. März 1964</item>
    </string-array>
    <string-array name="df_values">
        <item>dd.MM.yyyy</item>
        <item>dd. MMMM yyyy</item>
    </string-array>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name - UNUSED </string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_header_data_sync">Data &amp; sync (not used)</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications (not used)</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="no_support_yet">Media not yet supported</string>
    <string name="pref_description_wifi_required"> Hires images and videos only load if Wifi connection is available.</string>
    <string name="pref_title_wifi_required"> Load Hires/Video with Wifi only</string>
    <string name="newest_first">newest_first</string>
    <string name="enable_tls"><![CDATA[Please enable TLS v1 in Settings > General]]></string>
    <string name="lowres_fallback">Fall back to lower resolution image if NASA has a bad link
        for hires image, which happens from time to time</string>
    <string name="fallback_lowres_title">Fallback to lowres (NOT YET ACTIVE)</string>
    <string name="reminder">Reminder</string>
    <string name="no_email_client">Could not find any suitable e-mail client on your device</string>
    <string name="no_vimeo_thumb">Could not create a thumbnail image for this Vimeo video</string>
    <string name="pref_debug"> Debug settings</string>
    <string name="wallpaper_nothing_to_revert">You did not set any FunInSpace Wallpaper yet,
        so there\'s nothing to restore</string>
    <string name="wallpaper_backup_current">You have set a new wallpaper. Saving your current
        Wallpaper, so that you can restore this by using \'Restore Original Wallpaper\' in Main
        Menu.\nNote, that this is not possible any more, if you deinstall the App before restoring</string>
    <string name="restore_original_wallpaper">Restore Original Wallpaper</string>
    <string name="hires_no_wifi">A WiFi connection is needed to load video or hires images to save
        bandwidth. You do not have a WiFi connection currently. You can adjust your settings
    to allow loading video or hires images without WiFi as well. Should the setting be changed now?
    You can change this setting at any time.</string>
    <string name="wp_no_delete_active">Image \'%s\' is your current wallpaper. This will not be deleted.</string>
    <string name="wp_confirm_dlg_msg">Do you want to set \'%s\' as your current wallpaper?
    If you select NO, this will just be added to the list of wallpapers available for shuffle</string>
    <string name="wp_confirm_dlg_title">Change wallpaper?</string>
    <string name="wp_confirm_dlg_pos_button">YES</string>
    <string name="wp_confirm_dlg_neg_button">NO</string>
    <string name="dlg_title_info">Info</string>
    <string name="temp_wp_dialog_info">Please have a long click on the image in fullscreen mode,
        which allows to select a wallpaper range. Using this menu does
        not currently allow to set a wallpaper</string>
    <string name="toast_wp_start_select">==TIP==\nAnother Long Press confirms your selection</string>
    <string name="toast_wp_select_finished">Wallpaper has been created …</string>
    <string name="wp_select_rect_string">Wallpaper select</string>
    <string name="search_option">Full Text Search/Filter</string>
    <string name="full_search_explain">Search and filter in explanation text in addition to title only</string>
    <string name="rating">Rating</string>
    <string name="set_as_wallpaper">Set as wallpaper</string>
    <string name="reselect_wallpaper">Choose new wallpaper range</string>
    <string name="pref_summary_read_text">Read out the explanation text for the image while watching
        the image in fullscreen. The context menu also offers a \'read out\' option.</string>
    <string name="pref_title_read_text">Read explanation</string>
    <string name="wp_quality_summary">Quality of newly saved wallpaper images. Images that have
        already been saved are not changed by this setting.</string>
    <string name="df_summary">Choose the format of date you like to be shown in the list of images.</string>
    <string name="hires_save_summary">Keep local copy of hires images on your device.\nNote:
        Videos will always be streamed and never get stored locally. Currently, this is limited to
        20 percent of free available storage, automatic deletion done if more memory is used. To be
        configurable later…</string>
    <string name="hires_save_title">Save Hires Images locally</string>
    <string name="rgb565_thumbs_summary">Use lower color resolution Thumbnail pictures to save
        memory. Check, if you see any difference in the list.</string>
    <string name="rgb565_thumbs_title">Thumbnail color quality</string>
    <string name="wp_shuffle_title">Wallpaper shuffle</string>
    <string name="wp_shuffle_summary">Currently only available with Android 5 or higher - shuffle
        is done at selected full hours, if switched on.</string>
    <string name="wp_shuffle_times_title">Wallpaper Shuffle times</string>
    <string name="wp_shuffle_times_summary">Select the hours at which a wallpaper shuffle should be done.</string>
    <string name="apod_bg_load_title">Get daily info in background</string>
    <string name="apod_bg_load_summary">Currently only available with Android 5 or higher. Load
        information about the daily image, even if the App is not started on that day. This helps
        to avoid missing images, because these get loaded at next start of the app.</string>
    <string name="archive_search_title">NASA Archive search</string>
    <string name="archive_search_string_hint">Search string (optional)</string>
    <string name="archive_search_case_sensitive">Search case sensitive</string>
    <string name="archive_search_reload_deleted">Also reload previously deleted images</string>
    <string name="archive_search_do_search">Search</string>
    <string name="archive_search_cancel">Cancel</string>
</resources>