<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--
    <ListPreference
        android:defaultValue="@string/newest_first"
        android:entries="@array/order_titles"
        android:entryValues="@array/order_values"
        android:key="item_order"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/item_order" />
        -->

    <SwitchPreference
        android:defaultValue="true"
        android:key="wifi_switch"
        android:summary="@string/pref_description_wifi_required"
        android:title="@string/pref_title_wifi_required" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="hires_save"
        android:summary="@string/hires_save_summary"
        android:title="@string/hires_save_title" />

    <!-- Just as a test, works, but not nice in terms of font size, indenting, and warning
         about not being allowed by inspection...
    <SeekBarPreference
        android:key="hires_max_mem"
        android:title="Hires memory limit"
        android:summary="The maximum memory to be used in percent of currently free internal memory."
        android:max="100"
        android:defaultValue="20" />
        -->

    <SwitchPreference
        android:defaultValue="false"
        android:key="wallpaper_shuffle"
        android:summary="@string/wp_shuffle_summary"
        android:title="@string/wp_shuffle_title" />

    <MultiSelectListPreference
        android:key="wp_shuffle_times"
        android:defaultValue="@array/wp_shuffle_times_defaults"
        android:entries="@array/wp_shuffle_times_titles"
        android:entryValues="@array/wp_shuffle_times_values"
        android:summary="@string/wp_shuffle_times_summary"
        android:title="@string/wp_shuffle_times_title" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="apod_bg_load"
        android:summary="@string/apod_bg_load_summary"
        android:title="@string/apod_bg_load_title" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="rgb565_thumbs"
        android:summary="@string/rgb565_thumbs_summary"
        android:title="@string/rgb565_thumbs_title" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="read_out"
        android:summary="@string/pref_summary_read_text"
        android:title="@string/pref_title_read_text" />

    <!-- 10.11.2017 - add selection of wallpaper image quality -->
    <ListPreference
        android:defaultValue="80"
        android:entries="@array/wp_quality_titles"
        android:entryValues="@array/wp_quality_values"
        android:key="wallpaper_quality"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="@string/wp_quality_summary"
        android:title="@string/wallpaper_quality" />

    <!-- 16.11.2017 - add selection for date format -->
    <ListPreference
        android:defaultValue="@string/df_dd_mm_yyyy"
        android:entries="@array/df_titles"
        android:entryValues="@array/df_values"
        android:key="date_format"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="@string/df_summary"
        android:title="@string/df_title" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="fallback_to_lowres"
        android:summary="@string/lowres_fallback"
        android:title="@string/fallback_lowres_title" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="full_search"
        android:summary="@string/full_search_explain"
        android:title="@string/search_option" />

    <!--
    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations" />
    -->

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />


    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <!--
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" />
        -->

</PreferenceScreen>
